Spacing Fix on p-tags.

--- a/style.css
+++ b/style.css
@@ -131,6 +131,11 @@ li {
     margin-left: 30px;
 }
 
+p {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
 .banner {
     width: 100%;
     margin-top: 30px;
